# selinux_demo

./: CMakeLists.txt  README.md  client.cpp  社区版开启SELinux方法.txt
selinux/: Makefile  selinux_demo_test.fc  selinux_demo_test.if  selinux_demo_test.pp.bz2  selinux_demo_test.te
selinux/tmp/: selinux_demo_test.tmp
